Tidy up spacing to ensure consistent spacing of information on all device sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,11 @@
     --logo: rgb(51, 51, 51);
     --light: rgb(221, 221, 221);
     --bg: rgb(238, 238, 238);
-    --warmyellow: rgb(241, 220, 23);
+    --warmyellow: rgb(238, 210, 49);
     --buttonblue: rgb(34, 229, 243);
 }
 
+/*------- General -------*/
 body{
     max-width: 100vw;
     font-family: 'Montserrat', sans-serif;
@@ -16,14 +17,15 @@ body{
     padding: 0;
 }
 
-blockquote{
-    padding: 0;
-    margin: 0;
-}
-
 .secheading{
     text-align: center;
     margin: 3% auto;
+}
+
+@media screen and (max-width: 568px){
+    .secheading{
+    margin: 6% auto;
+}
 }
 
 .hr60{
@@ -33,12 +35,6 @@ blockquote{
     margin: 2% auto;
 }
 
-@media screen and (max-width: 568px){
-    .secheading{
-    margin: 6% auto;
-}
-}
-
 .clear{
     clear: both;
     position: relative;
@@ -46,6 +42,7 @@ blockquote{
 
 .row{
     max-width: 100vw;
+    margin: 0;
 }
 
 /*------- Colors -------*/
@@ -95,6 +92,11 @@ blockquote{
 
 /*------- Welcome -------*/
 
+blockquote{
+    padding: 0;
+    margin: 0;
+}
+
 blockquote hr{
     margin-top: 2%;
     margin-bottom: 0;
@@ -142,8 +144,6 @@ blockquote hr{
 }
 
 @media screen and (max-width: 768px){
-
-
     .menutab img{
         width: 100%;
         height: 40vh;
@@ -281,18 +281,22 @@ blockquote hr{
 /*------- contact.html -------*/
 
 .contactcenter{
-    margin: 35px auto;
+    margin: 0 auto;
     width: 90%;
 }
 .contactbox{
     border: 1px solid var(--light);
     background-color: var(--light);
     border-radius: 5px;
-    height: 100%;
+    height: 90%;
     width: 90%;
     padding: 2% 0% 10% 10%;
-    margin: 0 auto;
+    margin: 5% auto;
     line-height: 1.0;
+}
+
+.contactbox .map{
+    padding-bottom: 20px;
 }
 
 #name,#email,#phone,#message{
@@ -307,6 +311,8 @@ blockquote hr{
 #message{
     padding-bottom: 150px;
 }
+
+
 
 
 
